# acpbox

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: publish-docker.yaml  publish-pypi.yaml  tag-on-merge.yaml  tests-on-pr.yaml
acpbox/: acp_stdio.py  cli.py  config.py  errors.py  main.py  mapping.py  schemas.py
acpbox/agents/: __init__.py  base.py  claude.py  codex.py  cursor.py  opencode.py
acpbox/routes/: __init__.py  agent_config.py  chat.py  models.py  responses.py
docs/: acp-lifecycle.md  api-mapping.md  config.md  deployment.md  spec.md
gateway/: __init__.py  acp_runner.py  acp_stdio.py  config.py  errors.py  main.py  mapping.py  schemas.py  session_store.py
gateway/routes/: chat.py  models.py  responses.py
tests/: conftest.py  test_agent_config.py  test_chat.py  test_models.py  test_responses.py  test_sessions.py
tests/unit/: test_config.py  test_errors.py  test_mapping.py  test_session_store.py
