[build-system]
requires = ["setuptools>=61", "wheel", "setuptools-scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "acpbox"
dynamic = ["version"]
description = "OpenAI-compatible HTTP API gateway for Agent Client Protocol (ACP) over stdio"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "acpbox contributors" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.27.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "pyyaml>=6.0",
  "agent-client-protocol>=0.8.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
]

[project.scripts]
acpbox = "acpbox.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["acpbox*"]

[tool.setuptools_scm]
fallback_version = "0.0.0"
